# fast-soy-admin

./: .gitignore  db_system.sqlite3  ifd.erd  note.md  pyproject.toml  run.py  sync_table.py
app/: __init__.py
app/api/v1/: __init__.py  utils.py
app/api/v1/dummy/: views.py
app/api/v1/mfs/: schema.py  views.py
app/api/v1/task/: schema.py  views.py
app/api/v1/unit/: schema.py  views.py
app/models/: base.py
app/models/dummy/: dummy.py
app/models/ifd/: __init__.py  plant.py
app/models/system/: __init__.py  task.py  utils.py
app/settings/: config.py
app/task/: listener.py  scheduler.py  task.py  test.py
app/utils/crud/: _utils.py  tortoise_crud.py
doc/: bak.ts
web/: .env.test  package.json  pnpm-lock.yaml
web/src/: App.vue  main.ts
web/src/hooks/common/: echarts.ts  table.ts
web/src/layouts/modules/global-header/: index.vue
web/src/locales/langs/: zh-cn.ts
web/src/plugins/: index.ts
web/src/plugins/fast-crud/: index.tsx
web/src/router/elegant/: imports.ts  routes.ts  transform.ts
web/src/service/: crud-api.ts  fast-crud-api.ts
web/src/service/api/: ifd.ts  index.ts  task.ts
web/src/service/request/: index.ts
web/src/theme/: settings.ts
web/src/typings/: components.d.ts  elegant-router.d.ts
web/src/views/_builtin/login/: index.vue
web/src/views/crud/demo/: api.ts  crud-api.ts  index.vue
web/src/views/crud/dummy/: api.ts  crud-api.ts  index.vue
web/src/views/early-warning/identify/: index.vue
web/src/views/early-warning/learning/: index.vue
web/src/views/equipment/unit/: api.ts  (+1 more)
web/src/views/home/: index.vue
(+25 files in other folders)
